--- a/style.css
+++ b/style.css
@@ -4,8 +4,22 @@ body
     font-family:Arial, Helvetica, sans-serif;
 }
 
+.assignment 
+{
+    display:flex;
+    padding:10px;
+    margin:10px;
+    background: lightgreen;
+}
+
+.assignment img
+{
+    width:200px;
+    padding:10px;
+}
+
 h1 
 {
-color: darkslategrey;
-text-align: center;
+    color: darkslategrey;
+    text-align: center;
 }
