--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body
 {
-    background: lightseagreen;
+    background: #45C4B0;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -9,17 +9,38 @@ body
     display:flex;
     padding:10px;
     margin:10px;
-    background: lightgreen;
+    background: #13678A;
+    border-radius:25px;
 }
 
 .assignment img
 {
     width:200px;
-    padding:10px;
+    margin:10px;
+    border:4px solid #DAFDBA;
+}
+
+.assignment img:hover
+{
+    border:4px solid #9AEBA3;
 }
 
 h1 
 {
-    color: darkslategrey;
+    color: #13678A;
     text-align: center;
+}
+
+h1:hover
+{
+    color: #9AEBA3;
+}
+
+a {
+    text-decoration: none;
+    color: #DAFDBA;
+}
+
+a:hover {
+    color: #9AEBA3;
 }
