--- a/style.css
+++ b/style.css
@@ -4,11 +4,17 @@ body
     font-family:Arial, Helvetica, sans-serif;
 }
 
+.assignments
+{
+    display: flex;
+    flex-wrap: wrap;
+}
 .assignment 
 {
-    display:flex;
+    width:20%;
     padding:10px;
     margin:10px;
+    padding:20px 10px;
     background: #13678A;
     border-radius:25px;
 }
@@ -18,6 +24,8 @@ body
     width:200px;
     margin:10px;
     border:4px solid #DAFDBA;
+    display:block;
+    margin:auto;
 }
 
 .assignment img:hover
@@ -34,6 +42,11 @@ h1
 h1:hover
 {
     color: #9AEBA3;
+}
+
+h2
+{
+text-align:center;
 }
 
 a {
